# Orange-Summer-Challenge

./: README.md  leaf_disease.ipynb
Potato and Weed Detection/: README.md  classes.txt  data.yaml
Potato and Weed Detection/runs/detect/train/: args.yaml  results.csv
Potato and Weed Detection/runs/detect/train11/: args.yaml  results.csv
Potato and Weed Detection/runs/detect/train9/: args.yaml  results.csv
Robot_softwear_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Robot_softwear_ws/install/AI_pkg/lib/AI_pkg/: detection_model
Robot_softwear_ws/install/AI_pkg/share/AI_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Robot_softwear_ws/install/interface_pkg/share/interface_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Robot_softwear_ws/install/interface_pkg/share/interface_pkg/cmake/: ament_cmake_export_include_directories-extras.cmake  export_interface_pkg__rosidl_generator_cExport.cmake  (+6 more)
Robot_softwear_ws/install/sensors_pkg/lib/sensors_pkg/: live_camera
Robot_softwear_ws/install/sensors_pkg/share/sensors_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Robot_softwear_ws/log/: latest_build
Robot_softwear_ws/src/AI_pkg/: package.xml  setup.cfg  setup.py
Robot_softwear_ws/src/AI_pkg/AI_pkg/: detection_model.py
Robot_softwear_ws/src/interface_pkg/: CMakeLists.txt  package.xml
Robot_softwear_ws/src/sensors_pkg/: setup.cfg  setup.py
Robot_softwear_ws/src/sensors_pkg/sensors_pkg/: live_camera.py
(+27 files in other folders)
